--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.13.1",
+    "immutability-helper": "^3.1.1",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
